--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Route Planner</title>
 </head>
 <body>
-    <h1>Route Planner Test</h1>
+    <h1>Route Planner</h1>
 
     <label for="startStation">Starting Station:</label>
     <input type="text" id="startStation" placeholder="Enter starting station">
@@ -18,9 +18,8 @@
 
     <div id="result"></div>
 
-    <!-- XLSX library CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
-    <script src="script.js"></script>
+    <!-- Load XLSX library first with defer -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
